--- a/AUTHORS
+++ b/AUTHORS
@@ -55,6 +55,7 @@ Andrew McKinlay <mckinlay@axonsoft.com>
 Andrew Pinski <pinskia@physics.uc.edu>
 Andrew Stitcher <astitcher@redhat.com>
 Andrew Stone <andrew@stone.com>
+Andrew Whatson <whatson@gmail.com>
 Andy Li <andy@onthewings.net>
 Andy Wingo <wingo@pobox.com>
 Anselm Baird-Smith <Anselm.BairdSmith@inria.fr>
