Update ChangeLog file (v7.2 - v7.4 changes only)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1482,15 +1482,19 @@ Also, includes 7.2 changes
 * Fix 'expected function body after declarator' clang error in gc_cpp.cc
 * Fix 'write to GC log failed' error
 * Fix GC_proc_fd value in child process at fork (Solaris)
+* Fix assertion violation in register_dynlib_callback on Android
 * Fix configure message about 'AIX gcc optimization fix'
 * Fix data race regarding *rlh value in generic_malloc_many
 * Fix first_thread stack_base initialization if custom GC_stackbottom (Win32)
 * Fix fread failure after enable_incremental if malloc is redirected (Linux)
 * Fix gc_cflags variable name in configure (HP/UX)
+* Fix handling of areas smaller than page size on recycle scratch area
 * Fix incorrect define GC_OPENBSD_THREADS on sparc64
 * Fix misaligned tlfs passed to AO_load on m68k
+* Fix missing GC_quiet declaration in pcr_interface.c
 * Fix missing gc_dlopen.c in CMake script
 * Fix missing scratch_last_end_ptr update (Irix)
+* Fix overflow of scratch_free_ptr value
 * Fix page_was_[ever_]dirty() for static roots (Solaris)
 * Fix printf format specifier in simple_example.html
 * Fix save_callers for multi-threaded case if built-in backtrace unavailable
