--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+[7.2o]
+
+2021-09-28  Ivan Maidanski <ivmai@mail.ru>
+
+	* doc/README: Bump version to 7.2o (rev. O).
+
 2021-09-21  Ivan Maidanski <ivmai@mail.ru>
 
 	* headers.c (GC_scratch_alloc): Add bytes to scratch_free_ptr only
