Update AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -289,6 +289,7 @@ Matt Austern <austern@google.com>
 Matthew Flatt <mflatt@plt-scheme.org>
 Matthias Andree <matthias.andree@gmx.de>
 Matthias Drochner <M.Drochner@fz-juelich.de>
+Matthieu Herrb <matthieu@openbsd.org>
 Maurizio Vairani <maurizio.vairani@cloverinformatica.it>
 Max Mouratov <mmouratov@gmail.com>
 Maya Rashish <coypu@sdf.org>
