Update AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -226,6 +226,7 @@ John Bowman <bowman@ualberta.ca>
 John Clements <clements@brinkerhoff.org>
 John David Anglin <dave.anglin@bell.net>
 John Ellis <ellis@xerox.parc.com>
+John Ericson <git@JohnEricson.me>
 John Merryweather Cooper <jmerry@mono-cvs.ximian.com>
 Jon Moore <jonm@apache.org>
 Jonas Echterhoff <jonas@unity3d.com>
