Do not name GCC intrinsics as C11 ones
* CMakeLists.txt (GC_BUILTIN_ATOMIC): Do not mention C11 in comment
(or documentation) when referring to GCC intrinsics.
* configure.ac (GC_BUILTIN_ATOMIC): Likewise.
* include/private/gc_atomic_ops.h: Likewise.
* ChangeLog (8.0.0): Do not mention C11 when referring to GCC
intrinsics.
* doc/README.macros (GC_BUILTIN_ATOMIC): Likewise.

--- a/ChangeLog
+++ b/ChangeLog
@@ -426,7 +426,7 @@
 * Access finalize_now atomically to avoid TSan warning without no-sanitize
 * Acknowledge thread restart from suspend_handler (NetBSD)
 * Add a sanity check that load_acquire and store_release are available
-* Add AO primitives implementation to GC based on C11 atomic intrinsic
+* Add AO primitives implementation to GC based on GCC atomic intrinsic
 * Add assertion for suspend_ack_sem in start_world
 * Add assertion to allocobj that live unmarked object cannot be reclaimed
 * Add assertions about held lock when accessing all_bottom_indices
