Fix a typo and add email in AUTHORS file (David Mosberger)
* AUTHORS: Fix typo in name (David Mosberger).
* ChangeLog (5.0alpha4): Likewise.
* AUTHORS: Add email for David Mosberger.

--- a/AUTHORS
+++ b/AUTHORS
@@ -124,7 +124,7 @@ David Daney <ddaney@avtrex.com>
 David Grove <groved@us.ibm.com>
 David Leonard <leonard@users.sourceforge.net>
 David Miller <davem@davemloft.net>
-David Mossberger
+David Mosberger <davidm@hpl.hp.com>
 David Peroutka <djp@volny.cz>
 David Pickens <dsp@rci.rutgers.edu>
 David Stes <stes@d5e02b1d.kabel.telenet.be>
