Update AUTHORS file (add Jakub Wojciech)

--- a/AUTHORS
+++ b/AUTHORS
@@ -191,6 +191,7 @@ Jaap Boender <jaapb@netbsd.org>
 Jack Andrews <effbiae@gmail.com>
 Jacob Navia <jacob.navia@jacob.remcomp.fr>
 Jakub Jelinek <jakub@redhat.com>
+Jakub Wojciech <jakub-w@riseup.net>
 James Clark <jjc@jclark.com>
 James Dominy
 Jan Alexander Steffens <jan.steffens@gmail.com>
