--- a/AUTHORS
+++ b/AUTHORS
@@ -194,6 +194,7 @@ Jaap Boender <jaapb@netbsd.org>
 Jack Andrews <effbiae@gmail.com>
 Jacob Navia <jacob.navia@jacob.remcomp.fr>
 Jakub Jelinek <jakub@redhat.com>
+Jakub Wojciech <jakub-w@riseup.net>
 James Clark <jjc@jclark.com>
 James Dominy
 James Moran <jamesmo@unity3d.com>
