Update AUTHORS file (add email for Jesse Hull, fix one for John Ellis) (a cherry-pick of commit 93c4273ce from 'release-8_2')

--- a/AUTHORS
+++ b/AUTHORS
@@ -202,7 +202,7 @@ Jeffrey Hsu <hsu@soda.berkeley.edu>
 Jeffrey Mark Siskind
 Jeremy Fitzhardinge <jeremy@goop.org>
 Jesper Peterson <jep@mtiame.mtia.oz.au>
-Jesse Hull
+Jesse Hull <jhull@parc.xerox.com>
 Jesse Jones <jesjones@mindspring.com>
 Jesse Rosenstock <jmr@ugcs.caltech.edu>
 Ji-Yong Chung
@@ -216,7 +216,7 @@ Johannes Totz <jtotz@ic.ac.uk>
 John Bowman <bowman@ualberta.ca>
 John Clements <clements@brinkerhoff.org>
 John David Anglin <dave.anglin@bell.net>
-John Ellis <ellis@xerox.parc.com>
+John Ellis <ellis@parc.xerox.com>
 John Merryweather Cooper <jmerry@mono-cvs.ximian.com>
 Jon Moore <jonm@apache.org>
 Jonas Echterhoff <jonas@unity3d.com>
