--- a/AUTHORS
+++ b/AUTHORS
@@ -212,7 +212,7 @@ Jeffrey Hsu <hsu@soda.berkeley.edu>
 Jeffrey Mark Siskind
 Jeremy Fitzhardinge <jeremy@goop.org>
 Jesper Peterson <jep@mtiame.mtia.oz.au>
-Jesse Hull
+Jesse Hull <jhull@parc.xerox.com>
 Jesse Jones <jesjones@mindspring.com>
 Jesse Rosenstock <jmr@ugcs.caltech.edu>
 Ji-Yong Chung
@@ -226,7 +226,7 @@ Johannes Totz <jtotz@ic.ac.uk>
 John Bowman <bowman@ualberta.ca>
 John Clements <clements@brinkerhoff.org>
 John David Anglin <dave.anglin@bell.net>
-John Ellis <ellis@xerox.parc.com>
+John Ellis <ellis@parc.xerox.com>
 John Ericson <git@JohnEricson.me>
 John Merryweather Cooper <jmerry@mono-cvs.ximian.com>
 Jon Moore <jonm@apache.org>
