--- a/ChangeLog
+++ b/ChangeLog
@@ -1174,6 +1174,13 @@ Also, includes 7.4.6 changes
 Also, includes 7.4.4 changes
 
 
+== [7.4.22] (not released yet) ==
+
+* Eliminate 'new_l may be used uninitialized' gcc warning in os_dep (Cygwin)
+
+Also, includes 7.2p changes.
+
+
 == [7.4.20] 2021-09-28 ==
 
 * Do not hold GC_fault_handler_lock when in Sleep (Windows)
@@ -1698,6 +1705,16 @@ Also, includes 7.2e, 7.2d, 7.2c, 7.2b changes
 * Use pthread_key for thread-local storage on FreeBSD
 * Use union of AO_t and word to favor strict-aliasing compiler optimization
 Also, includes 7.2 changes
+
+
+== [7.2p] (not released yet) ==
+
+* Fix a typo in debugging.html
+* Fix nodist_libgc_la_SOURCES value in Makefile.am for Solaris/sparc
+* Refer to Makefile.direct instead of deleted Makefile file in README
+* Remove checking of RS6000 completely
+* Remove non-working check of M68K in gctest
+* Revert addition of msvc_dbg.h in include.am
 
 
 == [7.2o] 2021-09-28 ==
